--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#  All Renders
+*.svg
+
+# Saves
+*.tanksav
+
 # Based on https://raw.githubusercontent.com/github/gitignore/main/Node.gitignore
 
 # Logs
