--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "tank-game",
   "module": "src/index.ts",
   "devDependencies": {
-    "bun-types": "^0.1.5"
+    "@types/node": "^18.6.5",
+    "bun-types": "^0.1.5",
+    "typescript": "^4.7.4"
   },
   "type": "module",
-  "main": "src/index.ts"
+  "main": "src/index.ts",
+  "scripts": {
+    "build": "tsc --outDir dist",
+    "start": "node dist/index.js"
+  }
 }
