--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "allowJs": true,
 
     // "bun-types" is the important part
-    "types": ["bun-types"]
-  }
+    "types": ["node"]
+  },
+  "include": ["src/**/*.ts"]
 }
