--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "module": "src/index.ts",
   "devDependencies": {
     "@types/node": "^18.6.5",
+    "@types/svg2png": "^4.1.1",
     "bun-types": "^0.1.5",
     "typescript": "^4.7.4"
   },
@@ -11,5 +12,8 @@
   "scripts": {
     "build": "tsc --outDir dist",
     "start": "node dist/index.js"
+  },
+  "dependencies": {
+    "svg2png": "^4.1.1"
   }
 }
