--- a/package.json
+++ b/package.json
@@ -2,18 +2,13 @@
   "name": "tank-game",
   "module": "src/index.ts",
   "devDependencies": {
-    "@types/node": "^18.6.5",
-    "@types/svg2png": "^4.1.1",
-    "bun-types": "^0.1.5",
-    "typescript": "^4.7.4"
+    "bun-types": "^0.1.5"
   },
   "type": "module",
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc --outDir dist",
-    "start": "node dist/index.js"
-  },
-  "dependencies": {
-    "svg2png": "^4.1.1"
+    "run": "node dist/index.js",
+    "start": "npm run build && npm run run"
   }
 }
