--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
     "run": "node dist/index.js",
     "start": "npm run build && npm run run"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@types/node": "^18.6.5"
+  }
 }
