--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "src/index.ts",
   "module": "src/index.ts",
   "devDependencies": {
-    "bun-types": "^0.1.5"
+    "bun-types": "^0.1.8"
   },
   "scripts": {
     "build": "tsc --outDir dist",
@@ -12,6 +12,8 @@
   },
   "type": "module",
   "dependencies": {
-    "@types/node": "^18.6.5"
+    "@purplet/gateway": "^1.0.1",
+    "@purplet/rest": "^1.0.1",
+    "discord-api-types": "^0.37.2"
   }
 }
